criado o component Task

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,9 +13,10 @@
     --gray-500: #262626;
     --gray-600: #1a1a1a;
     --gray-700: #0d0d0d;
-
+    
     --purple: #8284fa;
     --purple-dark: #4ea8de;
+    --blue: #4EA8DE;
     --blue-dark: #1e6f9f;
     --danger: #e25858;
 }
